@@ -1,16 +1,26 @@
 1..4935
 # Running under perl version 5.010000 for linux
-# Current time local: Tue Oct 14 17:52:15 2008
-# Current time GMT:   Tue Oct 14 08:52:15 2008
+# Current time local: Tue Oct 14 18:24:20 2008
+# Current time GMT:   Tue Oct 14 09:24:20 2008
 # Using Test.pm version 1.25
-# t/xml/tree-1.dat
+# t/xml/cdata-1.dat
 ok 1
 ok 2
+# t/xml/attrs-1.dat
 ok 3
 ok 4
 ok 5
 ok 6
 ok 7
 ok 8
+# t/xml/tree-1.dat
 ok 9
 ok 10
+ok 11
+ok 12
+ok 13
+ok 14
+ok 15
+ok 16
+ok 17
+ok 18
