@@ -1,5 +1,9 @@
 2008-10-14  Wakaba  <wakaba@suika.fam.cx>
 
+	* cdata-1.dat, attrs-1.dat: New test data files.
+
+2008-10-14  Wakaba  <wakaba@suika.fam.cx>
+
 	* tree-1.dat: New test data file.
 
 2008-10-14  Wakaba  <wakaba@suika.fam.cx>
