@@ -1,5 +1,9 @@
 2008-10-14  Wakaba  <wakaba@suika.fam.cx>
 
+	* Parser.pm.src: Attribute support.
+
+2008-10-14  Wakaba  <wakaba@suika.fam.cx>
+
 	* Parser.pm.src: Use array reference syntax for
 	|create_element_ns|, for Whatpm::NanoDOM compability.  Typo fixed.
 
